@@ -1,3 +1,8 @@
+2012-07-16  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* library/init.tcl:  Make registry 1.3 package (and possibly others)
+	* tests/init.test:   dynamically loadable in Tcl 8.4.
+
 2012-07-05  Don Porter  <dgp@users.sourceforge.net>
 
 	* unix/tclUnixPipe.c:	[Bug 1189293] Make "<<" binary safe.
